# advent-of-code-2023

./: .gitignore  Cargo.toml  README.md  day3.py  day5.py  day7.py  day8.py  day8b.py  expected_outputs.txt
aoc/: Cargo.toml
aoc/src/: board.rs  common.rs  dir.rs  infinite_grid.rs  input.rs  int_board.rs  lib.rs  moving_point.rs  point.rs  solution.rs
output/2015/: expected_outputs.txt
output/2016/: expected_outputs.txt
output/2017/: expected_outputs.txt
output/2018/: expected_outputs.txt
output/2019/: expected_outputs.txt
output/2020/: expected_outputs.txt
output/2021/: expected_outputs.txt
output/2023/: expected_outputs.txt
output/2024/: expected_outputs.txt
output/2025/: expected_outputs.txt
src/: board.rs  common.rs  dir.rs  main.rs  solver01.rs  solver02.rs  solver03.rs  solver04.rs  solver05.rs  solver06.rs  solver07.rs  solver08.rs  solver09.rs  solver10.rs  solver11.rs  solver12.rs  solver13.rs  solver14.rs  solver15.rs  solver16.rs  solver17.rs  solver18.rs  solver19.rs  solver20.rs  solver21.rs  solver22.rs  solver23.rs  solver24.rs  solver25.rs
year2015/: Cargo.toml
year2015/src/: lib.rs  solver01.rs  solver02.rs  solver03.rs  solver04.rs  solver05.rs  solver06.rs  solver10.rs  solver13.rs  solver14.rs  solver15.rs  solver18.rs  solver20.rs  solver23.rs
year2016/: Cargo.toml
year2016/src/: lib.rs  solver01.rs  solver02.rs  solver03.rs
year2017/: Cargo.toml
year2017/src/: lib.rs  solver01.rs  solver02.rs  solver04.rs  solver05.rs  solver20.rs
year2018/: Cargo.toml
year2018/src/: lib.rs  solver01.rs  solver02.rs  solver03.rs  solver05.rs  solver06.rs  solver10.rs  solver17.rs  solver18.rs
year2019/: Cargo.toml
year2019/src/: lib.rs  solver01.rs  solver02.rs  solver03.rs
year2020/: Cargo.toml
year2020/src/: lib.rs  solver01.rs  solver02.rs  solver03.rs  solver04.rs  solver05.rs  solver06.rs  solver07.rs  solver08.rs  solver09.rs  solver10.rs  solver11.rs  solver12.rs  solver13.rs  solver14.rs  solver15.rs  (+8 more)
year2021/: Cargo.toml
year2022/: Cargo.toml
year2023/: Cargo.toml
year2023/src/: solver01.rs  solver02.rs  solver03.rs  solver04.rs  solver05.rs  solver06.rs  solver07.rs  solver08.rs  solver09.rs  solver10.rs  solver11.rs  solver12.rs  solver13.rs  solver14.rs  solver15.rs  solver16.rs  solver17.rs  solver18.rs  solver19.rs  solver20.rs  solver21.rs  solver22.rs  solver23.rs  solver24.rs  solver25.rs
year2024/: Cargo.toml
year2025/: day01.py  day02.py  pyproject.toml
year2025/src/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
(+53 files in other folders)
