workspace = { members = ["aoc"] }
[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "aoc", version = "0.1.0" }
clap = { version = "4.4.11", features = ["derive"] }
num-integer = "0.1.45"
regex = "1.10.2"
string-builder = "0.2.0"
