workspace = { members = ["aoc", "year2015", "year2016", "year2017", "year2018", "year2019", "year2020", "year2021", "year2022", "year2023"] }
[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "aoc", version = "0.1.0" }
year2015 = { path = "year2015", version = "0.1.0" }
year2016 = { path = "year2016", version = "0.1.0" }
year2017 = { path = "year2017", version = "0.1.0" }
year2018 = { path = "year2018", version = "0.1.0" }
year2019 = { path = "year2019", version = "0.1.0" }
year2020 = { path = "year2020", version = "0.1.0" }
year2021 = { path = "year2021", version = "0.1.0" }
year2022 = { path = "year2022", version = "0.1.0" }
year2023 = { path = "year2023", version = "0.1.0" }
clap = { version = "4.4.11", features = ["derive"] }
num-integer = "0.1.45"
regex = "1.10.2"
string-builder = "0.2.0"
