[package]
name = "year2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc = { path = "../aoc", version = "0.1.0" }
fast_paths = "1.0.0"
num-integer = "0.1.46"
regex = "1.11.1"
string-builder = "0.2.0"
