[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc2025"
version = "1"
description = "Advent of Code 2025"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff == 0.14.7",
    "mypy == 1.19.0",
]

[tool.ruff]
line-length = 110
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "ANN", 
    "E",   
    "F",   
    "I",   
    "ISC", 
    "PD", 
    "PERF",
    "PIE", 
    "PL", 
    "RET", 
    "RUF", 
    "SIM", 
    "UP", 
    "W",   
]
ignore = [
    "PLR2004",
    "SIM115",
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
